adjust .prettier/.eslint files for semicolon

--- a/.eslintrc
+++ b/.eslintrc
@@ -63,7 +63,7 @@
         "builtinGlobals": true
       }
     ],
-    "semi": ["error", "never"],
+    "semi": ["error", "always"],
     "space-in-parens": ["error"],
     "space-infix-ops": "error",
     "object-curly-spacing": ["error", "always"],
