--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,5 @@
 {
-  "semi": false,
+  "semi": true,
   "singleQuote": true,
   "printWidth": 100,
   "tabWidth": 2,
@@ -7,4 +7,3 @@
   "trailingComma": "es5",
   "bracketSpacing": true
 }
-
